--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Parcel Sandbox</title>
+    <title>Vanilla Challenge</title>
+    <link rel="stylesheet" href="src/styles.css" />
     <meta charset="UTF-8" />
   </head>
-
   <body>
-    <h2>Hello!</h2>
     <script src="src/index.js"></script>
   </body>
 </html>
