--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <meta charset="UTF-8" />
   </head>
   <body>
+    <h1>Random number game</h1>
+    <div class="GenerateNum">
+      <label id="a">Generate a number between 0 and</label>
+      <input id="a" type="number" />
+    </div>
+    <div class="GuessNum">
+      <label id="b">Guess the number</label>
+      <input id="b" type="number" />
+      <button>Play!</button>
+    </div>
+    <div class="Text">
+      <span class="YouChose"></span>
+      <span class="result"></span>
+    </div>
     <script src="src/index.js"></script>
   </body>
 </html>
